--- a/px-context-browser.html
+++ b/px-context-browser.html
@@ -287,6 +287,28 @@ Define how your data will come in using these methods:
       this.$.columnBrowser.hideSpinner();
     },
 
+    _findNodeById: function(nodes, id) {
+      var _this = this;
+      var match = _.find(nodes, function(node) {
+        return _.isEqual(node.id, id);
+      });
+      if(typeof match !== 'undefined') {
+        return match;
+      } else {
+        var found = null;
+        _.each(nodes, function(node) {
+          if(node.children && node.children.length > 0) {
+            found = _this._findNodeById(node.children, id);
+          }
+        });
+        if(found) {
+          return found;
+        } else {
+          return null;
+        }
+      }
+    },
+
     _markSelected: function(nodes, item) {
       var _this = this;
       var match = _.each(nodes, function(node) {
@@ -311,7 +333,9 @@ Define how your data will come in using these methods:
       this.addEventListener("item-click", function(e) {
         var item = e.detail.item;
         //console.log(this.browserContext);
-        this._markSelected([this.browserContext], item);
+        // this._markSelected([this.browserContext], item);
+        var returned = this._findNodeById([this.browserContext], item.id);
+        console.log(returned);
       });
 
       this.set('_jsonURL', this.browserContextUrl);
