--- a/px-context-browser-column.html
+++ b/px-context-browser-column.html
@@ -8,7 +8,7 @@
       <div class="head">{{menuData.header}}</div>
       <div class="flex__item scroll-y" on-scroll="scrollEndHandler">
         <ul class$="{{UlSelected(menuData, selectedItem)}}">
-          <template is="dom-repeat" id="level" items="{{columnItems}}">
+          <template is="dom-repeat" id="level" items="{{_columnItems}}">
             <px-context-browser-column-item
               show-chevron
               column-item="[[item]]"
@@ -35,7 +35,7 @@
         value: null,
         observer: '_columnDataChanged'
       },
-      columnItems: {
+      _columnItems: {
         type: Array,
         value: function() { return []; }
       },
@@ -72,18 +72,14 @@
     _setColumnItems(columnData) {
       if(typeof this.fieldKeys !== 'undefined') {
         var newColumnItems = columnData[this.fieldKeys['children']];
-        var i = 0, len = this.columnItems.length;
-        console.log(len);
+        var i = 0, len = this._columnItems.length;
         for(i;i<len;i++) {
-          console.log(i);
-          this.pop('columnItems');
+          this.pop('_columnItems');
         };
-        console.log('this.columnItems', this.columnItems);
         var i = 0, len = newColumnItems.length;
         for(i;i<len;i++) {
-          this.push('columnItems', newColumnItems[i]);
+          this.push('_columnItems', newColumnItems[i]);
         };
-        console.log('this.columnItems', this.columnItems);
         this.$.level.render();
         // this.async( function() { this.$.level.render(); });
       }
