--- a/px-context-browser-column-browser.html
+++ b/px-context-browser-column-browser.html
@@ -8,7 +8,7 @@
     <div class="flex flex--col column-browser">
       <px-spinner id="spinner" finished></px-spinner>
       <div class="flex">
-        <template is="dom-repeat" id="levels" items="[[columns]]">
+        <template is="dom-repeat" id="levels" items="[[_columns]]">
           <px-context-browser-column
             column-data="[[item]]"
             field-keys="[[fieldKeys]]"
@@ -42,7 +42,7 @@
         value: function() { return {}; },
         observer: '_contextChanged'
       },
-      columns: {
+      _columns: {
         type: Array,
         value: function() { return []; }
       },
@@ -53,21 +53,20 @@
     },
 
     observers: [
-      '_contextChanged(context.random)'
+      '_contextChanged(context.localUpdatedAt)'
     ],
 
     _contextChanged: function() {
       if(!_.isEmpty(this.context)) {
         var children = this.context[this.fieldKeys['children']] || [];
-        if(_.isEmpty(this.columns)) {
+        if(_.isEmpty(this._columns)) {
           // add the first column
-          this.push('columns', { children });
+          this.push('_columns', { children });
         } else {
           // update existing columns
-          console.log('updating existing columns.0')
-          this.set('columns.0', { children });
+          this.set('_columns.0', { children });
+          // TODO: Recursively add more columns as children have many children...
         }
-
       } else {
         this.columns = [];
         // merge with existing?
