--- a/px-context-browser-column-item.html
+++ b/px-context-browser-column-item.html
@@ -100,16 +100,16 @@
     ],
 
     _columnItemChanged: function() {
-      console.log('_columnItemChanged')
+      // console.log('_columnItemChanged')
     },
 
     ready: function() {
-      console.log('column item ready');
+      // console.log('column item ready');
       // console.log(this.showChevron);
     },
 
     _columnItemSelectedChanged: function(item) {
-      console.log('asdf');
+      // console.log('asdf');
     },
 
     _computeOpenButtonClass: function(item) {
@@ -118,7 +118,7 @@
     },
 
     _computeIsSelected: function(selected) {
-      console.log('_computeIsSelected')
+      // console.log('_computeIsSelected')
       // console.log('_computeIsSelected', item.selected === false);
       return selected;
     },
